Web Animations: Properly report ComputedEffectTime::localTime

The localTime should still be reported when the timing is not in effect.

Bug: 827613
Change-Id: I3ed29988ed0869a5261e0d756f7fbc94c24f3d4c
Reviewed-on: https://chromium-review.googlesource.com/989655
Reviewed-by: Xida Chen <xidachen@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547699}
Former-commit-id: 02de1dcf4f6ace6334e30574427f10709afc6d43